--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "swiper": "^11.1.14"
+        "swiper": "^11.1.14",
+        "vue": "^3.5.13"
     }
 }
