--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
         "laravel-vite-plugin": "^0.7.2",
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
-        "vite": "^4.0.0"
+        "vite": "^6.2.0"
     },
     "dependencies": {
-        "swiper": "^11.1.14",
-        "vue": "^3.5.13"
+        "swiper": "^11.1.14"
     }
 }
